# --------------------------------------------
# List of available applications and examples
# --------------------------------------------


# Volcano
add_subdirectory(volcano/MSH)

# Tsunami
add_subdirectory(tsunami/tohoku)

# (Euler) Spherical overpressure with tensor terms
# add_subdirectory(clawpack/euler/3dx/overpressure)

# (Euler) Spherical overpressure with tensor terms
add_subdirectory(tsunami/tsunami_1d)









